# matter1_4_2_patch

examples/lighting-app/atbm/: .gn  AppTask.cpp  BUILD.gn  Button.cpp  DeviceCallbacks.cpp  LEDWidget.cpp  args.gni  main.cpp
examples/lighting-app/atbm/include/: AppTask.h  Button.h  DeviceCallbacks.h  LEDWidget.h
examples/lighting-app/atbm/mbedtls/: BUILD.gn
src/: BUILD.gn
src/lib/shell/: BUILD.gn  streamer_atbm.cpp
src/platform/: BUILD.gn  device.gni
src/platform/atbm/: ATBMCHIPCryptoPAL.cpp  ATBMCHIPCryptoPAL.h  ATBMConfig.cpp  ATBMConfig.h  ATBMDeviceInfoProvider.cpp  ATBMDeviceInfoProvider.h  ATBMFactoryDataProvider.cpp  ATBMFactoryDataProvider.h  ATBMSecureCertDACProvider.cpp  ATBMSecureCertDACProvider.h  ATBMUtils.cpp  ATBMUtils.h  BLEManagerImpl.h  BUILD.gn  BlePlatformConfig.h  CHIPDevicePlatformConfig.h  CHIPDevicePlatformEvent.h  CHIPPlatformConfig.h  ConfigurationManagerImpl.cpp  ConfigurationManagerImpl.h  ConnectivityManagerImpl.cpp  ConnectivityManagerImpl.h  ConnectivityManagerImpl_WiFi.cpp  DiagnosticDataProviderImpl.cpp  DiagnosticDataProviderImpl.h  DnssdImpl.cpp  InetPlatformConfig.h  KeyValueStoreManagerImpl.cpp  KeyValueStoreManagerImpl.h  Logging.cpp  NetworkCommissioningDriver.cpp  NetworkCommissioningDriver.h  OTAImageProcessorImpl.cpp  OTAImageProcessorImpl.h  PlatformManagerImpl.cpp  PlatformManagerImpl.h  SystemPlatformConfig.h  SystemTimeSupport.cpp
src/platform/atbm/common/: FreeRTOSConfig.h  app_flash_param.h  atbm_general.h  hal.h  portmacro.h  type.h
src/platform/atbm/common/arch/: cc.h  sys_arch.h
src/platform/atbm/easyflash/inc/: ef_cfg.h
src/platform/atbm/easyflash/plugins/types/: ef_types.h
src/platform/atbm/easyflash/port/: ef_port.c
src/platform/atbm/freertos/include/: FreeRTOS.h  StackMacros.h  event_groups.h  list.h  portable.h  projdefs.h  queue.h  task.h  timers.h
src/platform/atbm/lwip/include/.svn/: entries
src/platform/atbm/lwip/include/arch/: sys_arch.c  sys_arch.h
src/platform/atbm/lwip/include/arch/.svn/: entries
src/platform/atbm/lwip/include/arch/.svn/text-base/: cc.h.svn-base  cpu.h.svn-base  debug.h.svn-base  perf.h.svn-base
src/platform/atbm/lwip/include/compat/.svn/: entries
src/platform/atbm/lwip/include/compat/posix/.svn/: entries
src/platform/atbm/lwip/include/compat/posix/arpa/.svn/: entries
src/platform/atbm/lwip/include/compat/posix/net/.svn/: entries
src/platform/atbm/lwip/include/compat/posix/sys/.svn/: entries
src/platform/atbm/lwip/include/compat/stdc/.svn/: entries
src/platform/atbm/lwip/include/lwip/: arch.h  dns.h  init.h  lwipopts.h  mem.h  netif.h  opt.h  sockets.h  sys.h  tcp.h  timeouts.h
src/platform/atbm/lwip/include/lwip/.svn/: entries
src/platform/atbm/lwip/include/lwip/.svn/text-base/: api.h.svn-base  dhcp.h.svn-base  etharp.h.svn-base  ip4_addr.h.svn-base  lwipopts.h.svn-base  netif.h.svn-base  opt.h.svn-base  pbuf.h.svn-base
src/platform/atbm/lwip/include/lwip/apps/: httpd.h
src/platform/atbm/lwip/include/lwip/apps/.svn/: entries
src/platform/atbm/lwip/include/lwip/apps/.svn/text-base/: mdns.h.svn-base  mdns_priv.h.svn-base
src/platform/atbm/lwip/include/lwip/priv/.svn/: entries
src/platform/atbm/lwip/include/lwip/priv/.svn/text-base/: api_msg.h.svn-base  tcp_priv.h.svn-base
src/platform/atbm/lwip/include/lwip/prot/: etharp.h
src/platform/atbm/lwip/include/lwip/prot/.svn/: entries
src/platform/atbm/lwip/include/lwip/prot/.svn/text-base/: dhcp.h.svn-base  ethernet.h.svn-base
src/platform/atbm/lwip/include/netif/.svn/: entries
src/platform/atbm/lwip/include/netif/ppp/.svn/: entries
src/platform/atbm/lwip/include/netif/ppp/polarssl/.svn/: entries
src/platform/atbm/nimble/: BLEManagerImpl.cpp  debug.h
src/platform/atbm/nimble/nimble/host/include/host/: ble_gap.h  ble_hs.h
src/platform/atbm/nimble/nimble/host/include/host/.svn/: entries
src/platform/atbm/nimble/nimble/host/include/host/.svn/text-base/: ble_hs.h.svn-base  ble_hs_hci.h.svn-base  ble_hs_id.h.svn-base
src/platform/atbm/nimble/nimble/host/services/gap/include/services/gap/.svn/: entries
src/platform/atbm/nimble/nimble/host/services/gatt/include/services/gatt/.svn/: entries
src/platform/atbm/nimble/nimble/host/util/include/host/util/.svn/: entries
src/platform/atbm/nimble/nimble/include/nimble/: hci_common.h
src/platform/atbm/nimble/nimble/include/nimble/.svn/: entries
src/platform/atbm/nimble/nimble/include/nimble/.svn/text-base/: ble.h.svn-base  nimble_npl.h.svn-base
src/platform/atbm/nimble/porting/nimble/include/hal/.svn/: entries
src/platform/atbm/nimble/porting/nimble/include/hal/.svn/text-base/: hal_timer.h.svn-base
src/platform/atbm/nimble/porting/nimble/include/log/.svn/: entries
src/platform/atbm/nimble/porting/nimble/include/mem/.svn/: entries
src/platform/atbm/nimble/porting/nimble/include/modlog/.svn/: entries
src/platform/atbm/nimble/porting/nimble/include/modlog/.svn/text-base/: modlog.h.svn-base
src/platform/atbm/nimble/porting/nimble/include/nimble/.svn/: entries
src/platform/atbm/nimble/porting/nimble/include/os/: os_cputime.h  os_mbuf.h
src/platform/atbm/nimble/porting/nimble/include/os/.svn/: entries
src/platform/atbm/nimble/porting/nimble/include/os/.svn/text-base/: endian.h.svn-base  os.h.svn-base  queue.h.svn-base
src/platform/atbm/nimble/porting/nimble/include/stats/: stats.h
src/platform/atbm/nimble/porting/nimble/include/stats/.svn/: entries
src/platform/atbm/nimble/porting/nimble/include/syscfg/: syscfg.h
src/platform/atbm/nimble/porting/nimble/include/syscfg/.svn/: entries
src/platform/atbm/nimble/porting/nimble/include/sysinit/.svn/: entries
src/platform/atbm/nimble/porting/npl/freertos/include/nimble/: nimble_npl_os_function.h
src/platform/atbm/nimble/porting/npl/freertos/include/nimble/.svn/: entries
src/platform/atbm/nimble/porting/npl/freertos/include/nimble/.svn/text-base/: nimble_npl_os.h.svn-base  nimble_npl_os_function.h.svn-base  npl_freertos.h.svn-base
src/platform/atbm/route_hook/: atbm_route_hook.c  atbm_route_hook.h  atbm_route_table.c  atbm_route_table.h
(+13 files in other folders)
