# Copyright (c) 2022 Project CHIP Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Options from standalone-chip.mk that differ from configure defaults. These
# options are used from examples/.

import("//build_overrides/chip.gni")

chip_device_platform = "atbm"

mbedtls_target = "//mbedtls:mbedtls"
lwip_platform = "external"

chip_stack_lock_tracking = "none"

#enable_im_pretty_print = true
chip_build_tests = false
chip_build_libshell = true
chip_config_network_layer_ble = true
chip_inet_config_enable_tun_endpoint = true
chip_inet_config_enable_tcp_endpoint = true
chip_inet_config_enable_udp_endpoint = true
chip_enable_ota_requestor = true
chip_device_config_device_software_version_string = "1.0"
chip_config_software_version_number = 1

atbm_sdk_target = get_label_info(":sdk", "label_no_toolchain")

custom_toolchain = "${chip_root}/build/toolchain/nds32le-elf-mculib-v5:freertos_andes_gcc"
